--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import java.nio.file.Files
-
 plugins {
 	id 'java'
 	id 'groovy'
@@ -59,17 +57,6 @@ dependencies {
 tasks.withType(Test).configureEach {
 	useJUnitPlatform()
 }
-tasks.register("deletePlainJar") {
-	doLast {
-		java.nio.file.Path libsDir = project.layout.buildDirectory.asFile.get().toPath().resolve("libs/")
-		println libsDir.toAbsolutePath()
-		Files.walk(libsDir)
-				.filter(Files::isRegularFile)
-				.filter(p -> p.toString().contains("plain"))
-				.findFirst()
-				.ifPresentOrElse(Files::delete, { throw new RuntimeException("No plain jar") })
-	}
-}
 
 bootBuildImage {
 	publish = getTag() as boolean
@@ -82,7 +69,7 @@ bootBuildImage {
 	}
 	
 	if(getTag())
-		imageName = "${System.getenv("GHCR_REGISTRY")}/${project.name}:${project.version}"
+		imageName = "${System.getenv("GHCR_REGISTRY")}/camunda/${project.name}:${project.version}"
 }
 
 private String getTag() {
