--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,4 +4,4 @@ camunda.client.auth.method=oidc
 camunda.client.auth.token-url=http://localhost:8081/auth/realms/camunda-platform/protocol/openid-connect/token
 camunda.client.rest-address=http://localhost:8088
 camunda.client.grpc-address=http://localhost:26501
-benchmark.starter.duration-limit=PT90S
+#benchmark.starter.duration-limit=PT12S
