--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ benchmark.starter.with-results=false
 benchmark.starter.with-results-timeout=PT1M
 benchmark.starter.msg-name=msg
 benchmark.starter.start-via-message=false
+benchmark.starter.ignore-resource-exhausted=true
+benchmark.starter.fail-fast=false
+benchmark.starter.stall-detection=true
