--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,17 @@ benchmark.starter.start-via-message=false
 benchmark.starter.ignore-resource-exhausted=true
 benchmark.starter.fail-fast=false
 benchmark.starter.stall-detection=true
+
+benchmark.worker.job-type=benchmark-task
+benchmark.worker.completion-delay=PT0.3S
+benchmark.worker.payload-path=bpmn/big_payload.json
+benchmark.worker.stream-enabled=true
+benchmark.worker.send-message=false
+benchmark.worker.message-name=messageName
+benchmark.worker.correlation-key-variable-name=correlationKey-var
+
+camunda.client.execution-threads=10
+camunda.client.worker.defaults.name=benchmark-worker
+camunda.client.worker.defaults.timeout=PT1.8S
+camunda.client.worker.defaults.max-jobs-active=30
+camunda.client.worker.defaults.poll-interval=PT1S
