Add stats to Worker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ benchmark.worker.stream-enabled=true
 benchmark.worker.send-message=false
 benchmark.worker.message-name=messageName
 benchmark.worker.correlation-key-variable-name=correlationKey-var
+camunda.client.request-timeout=62000
 
 camunda.client.execution-threads=10
 camunda.client.worker.defaults.name=benchmark-worker
