--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,13 @@ benchmark.worker.stream-enabled=true
 benchmark.worker.send-message=false
 benchmark.worker.message-name=messageName
 benchmark.worker.correlation-key-variable-name=correlationKey-var
-camunda.client.request-timeout=62000
 
 camunda.client.execution-threads=10
 camunda.client.worker.defaults.name=benchmark-worker
 camunda.client.worker.defaults.timeout=PT1.8S
 camunda.client.worker.defaults.max-jobs-active=30
 camunda.client.worker.defaults.poll-interval=PT1S
+#camunda.client.request-timeout=PT5S
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
