--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ benchmark.starter.ignore-resource-exhausted=true
 benchmark.starter.fail-fast=false
 benchmark.starter.stall-detection=true
 
+benchmark.starter.rate-time=PT45M
+benchmark.starter.rate-increase=25
+
 benchmark.worker.job-type=benchmark-task
 benchmark.worker.completion-delay=PT0.3S
 benchmark.worker.payload-path=bpmn/big_payload.json
